--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -16,8 +16,10 @@ $positive:                        #fa023c;
 $calm:                            #ff7a99;
 $balanced:                        #2adc00;
 $energized:                       $positive;
-$assertive:                       $positive;
+$assertive:                       #1b1b1b;
 $royal:                           #000;
+$black:                           #000;
+$white:                           #fff;
 
 // Content
 $scroll-refresh-icon-color:       #eee;
