--- a/www/templates/client/quote-form.html
+++ b/www/templates/client/quote-form.html
@@ -25,7 +25,7 @@
     <irk-task>
       <irk-image-choice-question-step id="purpose" title="What's your priority for your website?" text="This will help us know what kind of service you need" optional="false" auto-complete="true">
         <irk-image-choice text="Sell Things" value="ecommerce" normal-state-image="ion-ios-cart-outline" selected-state-image="ion-ios-cart"></irk-image-choice>
-        <irk-image-choice text="Become Famous" value="portfolio" normal-state-image="ion-ios-body-outline" selected-state-image="ion-ios-body"></irk-image-choice>
+        <irk-image-choice text="Online Profile" value="portfolio" normal-state-image="ion-ios-body-outline" selected-state-image="ion-ios-body"></irk-image-choice>
         <irk-image-choice text="Provide Facilities" value="service" normal-state-image="ion-ios-gear-outline" selected-state-image="ion-ios-gear"></irk-image-choice>
         <irk-image-choice text="Gatherer Communities" value="community" normal-state-image="ion-ios-people-outline" selected-state-image="ion-ios-people"></irk-image-choice>
       </irk-image-choice-question-step>
