--- a/www/templates/exps.html
+++ b/www/templates/exps.html
@@ -2,6 +2,10 @@
   <ion-nav-title>
     Experiences <span class="subtitle">my formal work experiences</span>
   </ion-nav-title>
+  <ion-nav-buttons side="left">
+    <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+    </button>
+  </ion-nav-buttons>
   <ion-content class="services padding">
     <section id="cd-timeline" class="cd-container" ng-animate-children>
       <div class="exp-item" ng-repeat="exp in exps">
