--- a/www/templates/gallery.html
+++ b/www/templates/gallery.html
@@ -2,6 +2,10 @@
   <ion-nav-title>
     Gallery <span class="subtitle">My Photo Gallery</span>
   </ion-nav-title>
+  <ion-nav-buttons side="left">
+    <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+    </button>
+  </ion-nav-buttons>
   <ion-content>
     <ion-gallery class="photos" ion-gallery-items="items" ion-zoom-events="true"></ion-gallery>
   </ion-content>
