--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -28,7 +28,7 @@
       </div>
     </form>
     <div class="text-center">
-      <button type="button" class="button button-light button-small button-clear" ng-click="closeLogin()">Forgot Password?</button>
+      <button type="button" class="button button-light button-small button-clear" ng-click="lostPass.show()">Forgot Password?</button>
     </div>
   </ion-content>
 </ion-modal-view>
