--- a/www/templates/quote.html
+++ b/www/templates/quote.html
@@ -3,7 +3,7 @@
   <irk-ordered-tasks>
 
     <irk-task>
-      <irk-instruction-step id="intro" title="Project Worksheet" text="Completing this form will help me understand your project requirements. This will also serve as a website planner to walk your through the process of articulating your needs. Please just skip any questions that you don’t feel are relevant to this project." />
+      <irk-instruction-step id="intro" title="Project Worksheet" text="Completing this form will help me understand your project requirements. Please just skip any questions that you don’t feel are relevant to this project.<br><br>If you already have an account, press login below." link="#" link-target="login()" link-text="Log In" />
     </irk-task>
 
     <irk-task>
@@ -41,7 +41,7 @@
     <irk-task>
       <irk-image-choice-question-step id="purpose" title="What's your priority for your website?" text="This will help us know what kind of service you need" optional="false" auto-complete="true">
         <irk-image-choice text="Sell Things" value="ecommerce" normal-state-image="ion-ios-cart-outline" selected-state-image="ion-ios-cart"></irk-image-choice>
-        <irk-image-choice text="Become Famous" value="portfolio" normal-state-image="ion-ios-body-outline" selected-state-image="ion-ios-body"></irk-image-choice>
+        <irk-image-choice text="Online Profile" value="portfolio" normal-state-image="ion-ios-body-outline" selected-state-image="ion-ios-body"></irk-image-choice>
         <irk-image-choice text="Provide Facilities" value="service" normal-state-image="ion-ios-gear-outline" selected-state-image="ion-ios-gear"></irk-image-choice>
         <irk-image-choice text="Gatherer Communities" value="community" normal-state-image="ion-ios-people-outline" selected-state-image="ion-ios-people"></irk-image-choice>
       </irk-image-choice-question-step>
