--- a/www/templates/client/quotes.html
+++ b/www/templates/client/quotes.html
@@ -1,19 +1,25 @@
-<ion-view>
+<ion-view view-title="Quotes">
   <ion-nav-title>Quotes</ion-nav-title>
   <ion-nav-buttons side="right">
     <button class="button button-clear button-small button-white button-icon ion-more" ng-click="popover.show($event)"></button>
   </ion-nav-buttons>
-  <ion-content>
+  <ion-content class="quotelist">
     <ion-refresher spinner="android" pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
     <ion-list>
       <ion-item class="item-divider item-button-right">
         Your Project Quotes
-        <button class="button button-clear button-small icon-right ion-plus-round button-positive" ng-click="quoteModal.show()">&nbsp;New</button>
+        <button class="button button-clear button-small icon-right ion-plus-round button-positive" ng-click="quoteModalUser.show()">&nbsp;New</button>
       </ion-item>
-      <ion-item class="item-icon-left" ng-repeat="(id, quote) in quotes" ui-sref="app.client.quote({quoteId:id})">
+      <ion-item class="item-icon-left" ng-repeat="(id, quote) in quotes" ui-sref="app.client.quote({quoteId:id})" ng-click="closeOptionButtons()">
         <i class="icon quote-icon {{quote.purpose}} ion-code-working"></i>
         <h2>Project : {{quote.project}}</h2>
         <p><small ng-class="{balanced: isFuture(quote.duedate), positive: !isFuture(quote.duedate)}">Duedate {{quote.duedate | relativeDate}}</small></p>
+        <span class="badge" ng-class="statusClass(quote.status)">{{quote.status | toSpace | uppercase}}</span>
+
+        <ion-option-button class="button-icon ion-eye" ui-sref="app.client.quote({quoteId:id})" ng-click="closeOptionButtons()">
+        </ion-option-button>
+        <ion-option-button class="button-icon ion-edit" ui-sref="app.client.quotedit({quoteId:id})" ng-click="closeOptionButtons()">
+        </ion-option-button>
       </ion-item>
     </ion-list>
   </ion-content>
