--- a/www/templates/client/settings.html
+++ b/www/templates/client/settings.html
@@ -11,22 +11,22 @@
       <form name="accountForm" ng-submit="saveAccounts()" class="form-validate-wrap" autocomplete="off" _lpchecked="0" novalidate>
         <ion-item class="item-input item-floating-label">
           <span class="input-label">First Name*</span>
-          <input type="text" placeholder="First Name*" ng-model="editData.firstname" ng-disabled="isSaving" ng-minlength="3" ng-maxlength="20" ng-required="true" form-validate>
+          <input type="text" placeholder="First Name*" ng-model="editData.firstname" ng-disabled="isSaving" ng-minlength="3" ng-maxlength="20" ng-required="true">
           <span class="field-validate"></span>
         </ion-item>
         <ion-item class="item-input item-floating-label">
           <span class="input-label">Last Name</span>
-          <input type="text" placeholder="Last Name" ng-model="editData.lastname" ng-disabled="isSaving" ng-maxlength="20" form-validate>
+          <input type="text" placeholder="Last Name" ng-model="editData.lastname" ng-disabled="isSaving" ng-maxlength="20">
           <span class="field-validate"></span>
         </ion-item>
         <ion-item class="item-input item-floating-label">
           <span class="input-label">Mobile Number*</span>
-          <input type="text" placeholder="Mobile Number*" ng-model="editData.mobile" ng-disabled="isSaving" ng-maxlength="16" ng-required="true" form-validate>
+          <input type="text" placeholder="Mobile Number*" ng-model="editData.mobile" ng-disabled="isSaving" ng-maxlength="16" ng-required="true">
           <span class="field-validate"></span>
         </ion-item>
         <ion-item class="item-input item-floating-label">
           <span class="input-label">Valid Email*</span>
-          <input type="email" placeholder="Valid Email*" ng-model="editData.email" ng-disabled="isSaving" ng-minlength="6" ng-maxlength="50" ng-required="true" form-validate>
+          <input type="email" placeholder="Valid Email*" ng-model="editData.email" ng-disabled="isSaving" ng-minlength="6" ng-maxlength="50" ng-required="true">
           <span class="field-validate"></span>
         </ion-item>
         <ion-item class="item-input text-center form-submit text-center">
