--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,8 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
     <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
@@ -14,35 +12,35 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable" align-title="center">
-      <a menu-close href="#/home">
+      <a menu-toggle nav-clear href="#/home">
         <h1 class="title"><img src="img/fauzie-logo.png" alt="fauzie logo" height="20" /></h1>
       </a>
     </ion-header-bar>
     <ion-content class="has-footer">
       <ion-list>
-        <ion-item menu-close href="#/about">
+        <ion-item nav-clear menu-toggle href="#/about">
           About Me
         </ion-item>
-        <ion-item menu-close href="#/gallery">
+        <ion-item nav-clear menu-toggle href="#/gallery">
           Photo Gallery
         </ion-item>
-        <ion-item menu-close href="#/skills">
+        <ion-item nav-clear menu-toggle href="#/skills">
           My Skills
         </ion-item>
-        <ion-item menu-close href="#/exps">
+        <ion-item nav-clear menu-toggle href="#/exps">
           Experiences
         </ion-item>
-        <ion-item menu-close href="#/projects">
+        <ion-item nav-clear menu-toggle href="#/projects">
           Projects
         </ion-item>
-        <ion-item menu-close href="#/services">
+        <ion-item nav-clear menu-toggle href="#/services">
           Services
         </ion-item>
       </ion-list>
     </ion-content>
     <ion-footer-bar class="bar-dark">
-      <button class="button button-block button-outline button-positive get-quote" menu-close ng-hide="isLoggedIn" ng-click="getQuote()">Get a Quote</button>
-      <button class="button button-block button-outline button-positive get-quote" ui-sref="app.client.dashboard" menu-close ng-show="isLoggedIn">Dashboard</button>
+      <button class="button button-block button-outline button-positive get-quote" menu-toggle ng-hide="isLoggedIn" ng-click="getQuote()">Get a Quote</button>
+      <button class="button button-block button-outline button-positive get-quote" ng-click="goDashboard()" menu-toggle ng-show="isLoggedIn">Dashboard</button>
     </ion-footer-bar>
   </ion-side-menu>
 </ion-side-menus>
