--- a/www/templates/projects.html
+++ b/www/templates/projects.html
@@ -2,6 +2,10 @@
   <ion-nav-title>
     Projects <span class="subtitle">my recent works</span>
   </ion-nav-title>
+  <ion-nav-buttons side="left">
+    <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+    </button>
+  </ion-nav-buttons>
   <ion-content>
     <ion-list class="projects">
       <ion-item 
@@ -11,7 +15,7 @@
         <img ng-src="{{project.thumb}}">
         <h2>{{project.name}}</h2>
         <h4>{{project.cat}}</h4>
-        <h6>{{project.year}}</h6>
+        <h6>{{project.date | date:'MM yyyy'}}</h6>
       </ion-item>
     </ion-list>
   </ion-content>
